// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCustomField displays the correct icon based on dropdown state 1`] = `
<View
  style={
    {
      "backgroundColor": "#303030",
      "borderBottomLeftRadius": 10,
      "borderBottomRightRadius": 10,
      "borderColor": "#BABABA",
      "borderStyle": "solid",
      "borderTopLeftRadius": 10,
      "borderTopRightRadius": 10,
      "borderWidth": 1,
      "gap": 20,
      "paddingBottom": 20,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 20,
      "zIndex": 5,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "color": "#F6F6F6",
        "flexDirection": "row",
        "fontFamily": "Inter",
        "fontSize": 12,
        "fontWeight": "400",
        "gap": 10,
        "opacity": 1,
        "width": "100%",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="21"
      bbWidth="21"
      fill="none"
      focusable={false}
      height="21"
      meetOrSlice={0}
      minX={0}
      minY={0}
      size="21"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 21,
            "width": 21,
          },
        ]
      }
      vbHeight={25}
      vbWidth={25}
      width="21"
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M11.6816 20.2856V12.7856H4.18164V11.7856H11.6816V4.28564H12.6816V11.7856H20.1816V12.7856H12.6816V20.2856H11.6816Z"
          fill={
            {
              "payload": 4294375158,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        {
          "color": "#BABABA",
          "fontFamily": "Inter",
          "fontSize": 24,
          "fontWeight": "700",
        }
      }
    >
      Create Custom
    </Text>
    <View
      style={
        {
          "marginLeft": "auto",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="21"
        bbWidth="21"
        fill="none"
        focusable={false}
        height="21"
        meetOrSlice={0}
        minX={0}
        minY={0}
        size="21"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 21,
              "width": 21,
            },
          ]
        }
        vbHeight={25}
        vbWidth={25}
        width="21"
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M3.19236 8.1636L4.25586 7.1001L12.5001 15.3443L20.7444 7.1001L21.8079 8.1636L12.5001 17.4713L3.19236 8.1636Z"
            fill={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`CreateCustomField displays the correct icon based on dropdown state 2`] = `
<View
  style={
    {
      "backgroundColor": "#303030",
      "borderBottomLeftRadius": 10,
      "borderBottomRightRadius": 10,
      "borderColor": "#BABABA",
      "borderStyle": "solid",
      "borderTopLeftRadius": 10,
      "borderTopRightRadius": 10,
      "borderWidth": 1,
      "gap": 20,
      "paddingBottom": 20,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 20,
      "zIndex": 5,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "color": "#F6F6F6",
        "flexDirection": "row",
        "fontFamily": "Inter",
        "fontSize": 12,
        "fontWeight": "400",
        "gap": 10,
        "opacity": 1,
        "width": "100%",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="21"
      bbWidth="21"
      fill="none"
      focusable={false}
      height="21"
      meetOrSlice={0}
      minX={0}
      minY={0}
      size="21"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 21,
            "width": 21,
          },
        ]
      }
      vbHeight={25}
      vbWidth={25}
      width="21"
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M11.6816 20.2856V12.7856H4.18164V11.7856H11.6816V4.28564H12.6816V11.7856H20.1816V12.7856H12.6816V20.2856H11.6816Z"
          fill={
            {
              "payload": 4294375158,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        {
          "color": "#BABABA",
          "fontFamily": "Inter",
          "fontSize": 24,
          "fontWeight": "700",
        }
      }
    >
      Create Custom
    </Text>
    <View
      style={
        {
          "marginLeft": "auto",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="21"
        bbWidth="21"
        fill="none"
        focusable={false}
        height="21"
        meetOrSlice={0}
        minX={0}
        minY={0}
        size="21"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 21,
              "width": 21,
            },
          ]
        }
        vbHeight={25}
        vbWidth={25}
        width="21"
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M3.17234 16.3761L12.4801 7.06836L21.7878 16.3761L20.7243 17.4396L12.4801 9.19536L4.23584 17.4396L3.17234 16.3761Z"
            fill={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
  <View
    style={
      {
        "borderTopColor": "#BABABA",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 17,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 20,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#232323",
          "borderBottomLeftRadius": 10,
          "borderBottomRightRadius": 10,
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "flexDirection": "row",
          "fontFamily": "Inter",
          "fontSize": 12,
          "fontWeight": "400",
          "gap": 7,
          "opacity": 1,
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="21"
        bbWidth="21"
        color="#F6F6F6"
        fill="none"
        focusable={false}
        height="21"
        meetOrSlice={0}
        minX={0}
        minY={0}
        size="21"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 21,
              "width": 21,
            },
          ]
        }
        vbHeight={25}
        vbWidth={24}
        width="21"
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M8.3845 12.8077H15.6155V11.8077H8.3845V12.8077ZM8.3845 15.577H15.6155V14.577H8.3845V15.577ZM8.3845 18.3462H12.6155V17.3462H8.3845V18.3462ZM5 21.5V3.5H14.5L19 8V21.5H5ZM14 8.5V4.5H6V20.5H18V8.5H14Z"
            fill={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        style={
          {
            "color": "#F6F6F6",
            "fontFamily": "Inter",
            "fontSize": 16,
            "fontWeight": "400",
          }
        }
        variant="secondary"
      >
        Comment
      </Text>
    </View>
  </View>
</View>
`;

exports[`CreateCustomField renders correctly in closed state 1`] = `
<View
  style={
    {
      "backgroundColor": "#303030",
      "borderBottomLeftRadius": 10,
      "borderBottomRightRadius": 10,
      "borderColor": "#BABABA",
      "borderStyle": "solid",
      "borderTopLeftRadius": 10,
      "borderTopRightRadius": 10,
      "borderWidth": 1,
      "gap": 20,
      "paddingBottom": 20,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 20,
      "zIndex": 5,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "color": "#F6F6F6",
        "flexDirection": "row",
        "fontFamily": "Inter",
        "fontSize": 12,
        "fontWeight": "400",
        "gap": 10,
        "opacity": 1,
        "width": "100%",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="21"
      bbWidth="21"
      fill="none"
      focusable={false}
      height="21"
      meetOrSlice={0}
      minX={0}
      minY={0}
      size="21"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 21,
            "width": 21,
          },
        ]
      }
      vbHeight={25}
      vbWidth={25}
      width="21"
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M11.6816 20.2856V12.7856H4.18164V11.7856H11.6816V4.28564H12.6816V11.7856H20.1816V12.7856H12.6816V20.2856H11.6816Z"
          fill={
            {
              "payload": 4294375158,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        {
          "color": "#BABABA",
          "fontFamily": "Inter",
          "fontSize": 24,
          "fontWeight": "700",
        }
      }
    >
      Create Custom
    </Text>
    <View
      style={
        {
          "marginLeft": "auto",
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="21"
        bbWidth="21"
        fill="none"
        focusable={false}
        height="21"
        meetOrSlice={0}
        minX={0}
        minY={0}
        size="21"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 21,
              "width": 21,
            },
          ]
        }
        vbHeight={25}
        vbWidth={25}
        width="21"
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M3.19236 8.1636L4.25586 7.1001L12.5001 15.3443L20.7444 7.1001L21.8079 8.1636L12.5001 17.4713L3.19236 8.1636Z"
            fill={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;
